tests/NormalTests/paczka1/fuzzy1/87517032.err
Error in line 2: RFJMGES9Q A370 15,9
Error in line 14: A370 A877 t6,0
Error in line 17: mmrSRBchC A877 96,3
Error in line 28: t2gu A877 21,5
Error in line 29: RG6LDYN1z6S A877 30,0
Error in line 27: A370 A370 93,4
